=== 2017-01-18
* Enhancements
  * Added ability to find elements using any valid attribute
  * Updated populate_page_with to also check if the element is visible prior to setting value
* Fixes
  * Fixed issue when using the page and element accessors for html 5 elements
=== 2017-01-17
* Enhancements
  * Added :using_params parameter to both on_page and if_page methods
  * Fixed issue with generic element calls
  * Added support for the svg element
  * Support label locators on TextArea, SelectList, RadioButton and FileField
=== Version-1.1.7/2017-01-16
* Enhancements
  * Updated expected_element to use the global default element wait by default
  * Added scroll_into_view method to Element
  * Updated routes to accept more than two entries in the array which are passed as arguments
  * Added *_element and *_elements methods to Druid and Element for the following types
    * addr
    * address
    * article
    * aside
    * bdi
    * bdo
    * cite
    * code
    * dd
    * dfn
    * dt
    * em
    * figcaption
    * figure
    * footer
    * header
    * hgroup
    * kbd
    * mark
    * nav
    * noscript
    * rp
    * rt
    * ruby
    * samp
    * section
    * sub
    * summary
    * sup
    * var
    * wbr
=== 2017-01-15
* Fixes
  * Fixed issue when calling new multi-element class methods using a block
=== Version 1.1.6/2017-01-13
* Enhancement
  * Added callback to initialize_accessors method during initialization
  * Added html method to Element
  * Added generated method to return text for a table
  * Added generated method to return text for an unordered list
  * Added generated method to return text for an ordered list
  * Added the following class level methods to return all elements matching the locator
    * divs
    * buttons
    * text_fields
    * hidden_fields
    * text_areas
    * select_lists
    * links
    * checkboxes
    * radio_buttons
    * spans
    * tables
    * cells
    * images
    * forms
    * list_items
    * unordered_lists