@@ -1,38 +1,69 @@
 module Druid
   module LocatorGenerator
 
+    BASIC_ELEMENTS = [:abbr,
+                      :address,
+                      :article,
+                      :aside,
+                      :bdi,
+                      :cite,
+                      :code,
+                      :dd,
+                      :em,
+                      :figcaption,
+                      :figure,
+                      :footer,
+                      :header,
+                      :hgroup,
+                      :kbd,
+                      :mark,
+                      :nav,
+                      :noscript,
+                      :rp,
+                      :rt,
+                      :ruby,
+                      :samp,
+                      :section,
+                      :sub,
+                      :summary,
+                      :sup,
+                      :var,
+                      :wbr]
+
+    ADVANCED_ELEMENTS = [:text_field,
+                         :hidden_field,
+                         :text_area,
+                         :select_list,
+                         :link,
+                         :checkbox,
+                         :radio_button,
+                         :button,
+                         :div,
+                         :span,
+                         :table,
+                         :cell,
+                         :image,
+                         :form,
+                         :list_item,
+                         :unordered_list,
+                         :ordered_list,
+                         :h1,
+                         :h2,
+                         :h3,
+                         :h4,
+                         :h5,
+                         :h6,
+                         :paragraph,
+                         :label,
+                         :file_field,
+                         :area,
+                         :canvas,
+                         :audio,
+                         :video,
+                         :svg]
+
     def self.generate_locators(target)
-      [:text_field,
-       :hidden_field,
-       :text_area,
-       :select_list,
-       :link,
-       :checkbox,
-       :radio_button,
-       :button,
-       :div,
-       :span,
-       :table,
-       :cell,
-       :image,
-       :form,
-       :list_item,
-       :unordered_list,
-       :ordered_list,
-       :h1,
-       :h2,
-       :h3,
-       :h4,
-       :h5,
-       :h6,
-       :paragraph,
-       :label,
-       :file_field,
-       :area,
-       :canvas,
-       :audio,
-       :video,
-       :svg].each do |tag|
+       ADVANCED_ELEMENTS.each do |tag|
          target.send(:define_method, "#{tag.to_s}_element") do |*identifier|
            self.send "#{tag.to_s}_for", locator(identifier).clone
          end
@@ -42,34 +73,7 @@ module Druid
          end
        end
 
-       [:abbr,
-       :address,
-       :article,
-       :aside,
-       :bdi,
-       :cite,
-       :code,
-       :dd,
-       :em,
-       :figcaption,
-       :figure,
-       :footer,
-       :header,
-       :hgroup,
-       :kbd,
-       :mark,
-       :nav,
-       :noscript,
-       :rp,
-       :rt,
-       :ruby,
-       :samp,
-       :section,
-       :sub,
-       :summary,
-       :sup,
-       :var,
-       :wbr].each do |tag|
+       BASIC_ELEMENTS.each do |tag|
          target.send(:define_method, "#{tag.to_s}_element") do |*identifier|
            self.send :element_for, tag, locator(identifier)
          end
